<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical"
    >


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />


    <LinearLayout
        android:id="@+id/lay_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margins">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账号"
            android:layout_marginBottom="@dimen/button_normal_sizes"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_edit_bg"
            android:gravity="center"
            android:orientation="horizontal"
            >





            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/on_char"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:hint="@string/input_account"
                android:maxLength="20"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"

                android:textSize="@dimen/textview_small_size"
                />

            <ImageView
                android:id="@+id/img_delete_user_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/delete_edit"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码"
            android:layout_marginBottom="@dimen/button_normal_sizes"
android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_edit_bg"
            android:gravity="center"
            >




            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/on_char"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:hint="@string/input_psw"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="10px"
                android:textSize="@dimen/textview_small_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"

                />

            <ImageView
                android:id="@+id/img_delete_psw_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/delete_edit"
                android:visibility="gone"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/cb_remember_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_edge"
                android:button="@drawable/checkbox_selector"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_textview"
                android:text="记住密码"
                android:textSize="@dimen/textview_small_size"

                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_forgetPsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="@dimen/margin_edge"
                android:background="@drawable/bg_textview"
                android:text="忘记密码？"
                android:textSize="@dimen/textview_small_size"
                android:visibility="gone"
                />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/slidingmenu_offset"
        android:background="@mipmap/login_btn_next"
        android:textColor="#ffffff"
        android:textSize="@dimen/activity_horizontal_margins"
        android:gravity="center"
        />


</LinearLayout>
