<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.BackPswActivity">

    <include layout="@layout/pub_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_edge"
            android:gravity="center"
            android:text="手机号"
            android:textSize="@dimen/textview_normal_size" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10px"
            android:hint="请输入手机号码"
            android:padding="@dimen/padding"
            android:paddingLeft="10px"
            android:textSize="@dimen/textview_small_size" />
    </LinearLayout>

    <LinearLayout style="@style/common_horizontal_division_line_style" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center"
        android:paddingRight="@dimen/padding">

        <TextView
            android:id="@+id/tv_v_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_edge"
            android:gravity="center"
            android:text="验证码"
            android:textSize="@dimen/textview_normal_size" />

        <EditText
            android:id="@+id/et_v_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10px"
            android:hint="请输入验证码"
            android:padding="@dimen/padding"
            android:paddingLeft="10px"
            android:textSize="@dimen/textview_small_size" />

        <TextView
            android:id="@+id/tv_get_v_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_selector"
            android:gravity="center"
            android:text="获取验证码"
            android:textColor="#ffffff"
            android:textSize="@dimen/textview_smallx_size" />
    </LinearLayout>

    <LinearLayout style="@style/common_horizontal_division_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:background="#ffffff"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_edge"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="@dimen/textview_normal_size" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10px"
            android:hint="@string/input_psw"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:paddingLeft="10px"
            android:textSize="@dimen/textview_small_size" />
    </LinearLayout>

    <LinearLayout style="@style/common_horizontal_division_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_edge"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="@dimen/textview_normal_size" />

        <EditText
            android:id="@+id/et_confirm_psw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10px"
            android:hint="@string/confirm_psw"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:paddingLeft="10px"
            android:textSize="@dimen/textview_small_size" />
    </LinearLayout>

    <LinearLayout style="@style/common_horizontal_division_line_style" />



    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />

    <Button
        android:id="@+id/bt_complete"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_str_bt_selector"
        android:padding="5dp"
        android:text="提交"
        android:textColor="#ffffff"
        android:textSize="@dimen/button_normal_size"
        android:layout_marginBottom="@dimen/title_height"
        />

</LinearLayout>
